Changelog
=========


1.8.1 (unreleased)
------------------

- Nothing changed yet.


1.8 (2013-12-23)
----------------

- Add editable filename functionality.
  The File-Schema is extended with a new StringField: originFilename.
  You can set a new filename without touching its extension.
  [elioschmutz]

- Use ftw.colorbox for ftw.file overlay.
  [tschanzt]

- Use PIL itself to detect images.
  [tschanzt]

- Remove percent signs from download URL to fix problems in combination with
  Apache mod_rewrite.
  [buchi]



1.7.4 (2013-11-28)
------------------

- Require ftw.upgrade >= 1.4.0 required by upgrade 1514.
  [jone]

- Add upgradestep to recalculate wrong contenttypes.
  [tschanzt]


1.7.3 (2013-11-04)
------------------

- Customize getIcon method. Search MimetypeRegistry before using iconmaps.
  [tschanzt]


1.7.2 (2013-10-16)
------------------

- Add French translations.
  [tschanzt]


1.7.1 (2013-07-19)
------------------

- Fix regression in download redirect with unicode filenames.
  [jone]


1.7.0 (2013-07-18)
------------------

- Drop Plone 4.1 support.
  [jone]

- File download: redirect to URL containing filename.
  This allows us to easily track downloads in statistics tools.
  [jone]

- Redirect users without any modifying permissions (without editable border)
  to the download when not hitting a specific view.
  Also add File back to allowAnonymousViewAbout for making sure that /view
  is added in the navigation.
  [jone]


1.6.4 (2013-06-04)
------------------

- Fix Upgradestep.
  [tschanzt]


1.6.3 (2013-05-31)
------------------

- Add additional Schemata for removal since it was renamed.
  [tschanzt]

- Add permission to edit advanced fields.
  [tschanzt]


1.6.2 (2013-05-17)
------------------

- Hide author in file view if anonymous and allowAnonymousViewAbout is False.
  [Julian Infanger]


1.6.1 (2013-04-17)
------------------

- Lawgiver support: map permissions.
  [jone]


1.6 (2013-01-21)
----------------

- Drop Plone 4.0 support.